@@ -47,8 +47,8 @@
 #include "message/formatted-message.h"
 #include "message/message.h"
 #include "misc/misc.h"
-#include "status/status-type-manager.h"
 #include "status/status-type-data.h"
+#include "status/status-type-manager.h"
 #include "talkable/talkable.h"
 #include "debug.h"
 
@@ -357,8 +357,10 @@ void HistorySqlStorage::appendStatus(const Contact &contact, const Status &statu
 
 	QMutexLocker locker(&DatabaseMutex);
 
+	StatusTypeData statusTypeData = StatusTypeManager::instance()->statusTypeData(status.type());
+
 	AppendStatusQuery.bindValue(":contact_id", ContactsMapping->idByContact(contact, true));
-	AppendStatusQuery.bindValue(":status", status.type());
+	AppendStatusQuery.bindValue(":status", statusTypeData.name());
 	AppendStatusQuery.bindValue(":set_time", time);
 	AppendStatusQuery.bindValue(":description", status.description());
 
